# agent

./: .env.sample  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/application/usecase/: agent_usecase.rs
src/domain/: error.rs  model.rs
src/domain/error/: llm_provider_error.rs  tool_error.rs
src/domain/model/: agent_item.rs  function.rs  input_item.rs  message.rs
src/domain/port/: llm_provider.rs  tool.rs
src/infrastructure/: llm_provider.rs
src/infrastructure/llm_provider/: openai_llm_provider.rs
src/infrastructure/tool/: web_search_tool.rs
src/presentation/: http.rs
src/presentation/http/: agent.rs  healthcheck.rs
src/presentation/state/: app_state.rs
