[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
dotenvy = "0.15.7"
env_logger = "0.11.11"
log = "0.4.33"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full", "macros", "rt-multi-thread"] }
